test/fail/Sections-7.agda
postulate
  _+_ : Set₁ → Set₁ → Set₁
  _+  : Set₁ → Set₁ → Set₁

Foo : Set₁ → Set₁
Foo = _+ Set
